service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-2-service
spec:
  selector:
    app: otus-2
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 80
  type: NodePort
