ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: otus-2-service
              port: 
                number: 9000
